plugins { id 'com.android.application' }

android {
    namespace 'com.smproduce.binreceiving'
    compileSdk 35
    defaultConfig {
        applicationId 'com.smproduce.binreceiving'
        minSdk 26
        targetSdk 35
        versionCode 3
        versionName '1.0.2'
        buildConfigField 'String', 'BASE_URL', '"https://smproduceprod.uk"'
        buildConfigField 'String', 'APP_TOKEN', '"SMTC26_SECURE_2026"'
    }
    buildFeatures { buildConfig true }
    buildTypes {
        release { minifyEnabled false }
        debug { applicationIdSuffix '.debug'; versionNameSuffix '-debug' }
    }
    compileOptions { sourceCompatibility JavaVersion.VERSION_11; targetCompatibility JavaVersion.VERSION_11 }
}
